--- a/Application1/index.html
+++ b/Application1/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Application1</title>
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="js/globalize.min.js"></script>
 
     <script type="text/javascript" src="js/dx.all.js"></script>
+    <script type="text/javascript" src="js/knockout.mapping-latest.js"></script>
     <!--
     <script type="text/javascript" src="js/dx.all.debug.js"></script>
     -->
@@ -47,6 +48,7 @@
     <script type="text/javascript" src="app.config.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="data/db.js"></script>
+    <script type="text/javascript" src="data/TrackerManager.js"></script>
 
     <!-- Layouts -->
     <link rel="stylesheet" type="text/css" href="layouts/Navbar/NavbarLayout.css" />
@@ -86,6 +88,12 @@
 
 		<script type="text/javascript" src="views/TrackerEdit.js"></script>
 		<link rel="dx-template" type="text/html" href="views/TrackerEdit.dxview"/>
+
+		<script type="text/javascript" src="views/TrackerAdd.js"></script>
+		<link rel="dx-template" type="text/html" href="views/TrackerAdd.dxview"/>
+
+		<script type="text/javascript" src="views/TrackerAdd2.js"></script>
+		<link rel="dx-template" type="text/html" href="views/TrackerAdd2.dxview"/>
 </head>
 <body>
 </body>
