--- a/Application1/index.html
+++ b/Application1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>Application1</title>
@@ -88,9 +88,6 @@
 
 		<script type="text/javascript" src="views/TrackerEdit.js"></script>
 		<link rel="dx-template" type="text/html" href="views/TrackerEdit.dxview"/>
-
-		<script type="text/javascript" src="views/TrackerAdd.js"></script>
-		<link rel="dx-template" type="text/html" href="views/TrackerAdd.dxview"/>
 
 		<script type="text/javascript" src="views/TrackerAdd2.js"></script>
 		<link rel="dx-template" type="text/html" href="views/TrackerAdd2.dxview"/>
